New refactoring:  - now photos are picked in Settings  - added a container RecyclerView for photos  - remove a context menu from the main screen

--- a/Aboutme/app/src/main/res/layout/activity_settings.xml
+++ b/Aboutme/app/src/main/res/layout/activity_settings.xml
@@ -11,6 +11,16 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/hided_group0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:text="Фото"
+            android:textAlignment="center" />
+
+        <include layout="@layout/part_photo_picker"/>
+
+        <Button
             android:id="@+id/hided_group1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
