Fix a problem with permissions, make refactoring of code

--- a/Aboutme/app/src/main/res/layout/fragment_photo_show.xml
+++ b/Aboutme/app/src/main/res/layout/fragment_photo_show.xml
@@ -5,7 +5,8 @@
 
     <ImageView
         android:id="@+id/pager_item"
-        android:scaleType="centerCrop"
+        android:background="#000000"
+        android:scaleType="fitCenter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
