--- a/Aboutme/app/src/main/res/layout/activity_settings.xml
+++ b/Aboutme/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,7 @@
     tools:context="iv.nakonechnyi.aboutme.SettingsActivity">
 
     <LinearLayout
+        android:id="@+id/root_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
