--- a/NewsFeeder/app/src/main/res/layout/activity_news.xml
+++ b/NewsFeeder/app/src/main/res/layout/activity_news.xml
@@ -4,4 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    android:background="@drawable/rounded_bg"/>
+    android:background="@color/newsfeeder_bg_color"/>
