--- a/NewsFeeder/app/src/main/res/layout/main_activity.xml
+++ b/NewsFeeder/app/src/main/res/layout/main_activity.xml
@@ -4,5 +4,6 @@
     android:id="@+id/container_list_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:padding="16dp"
+    android:background="@color/newsfeeder_bg_color"
     tools:context=".MainActivity" />
