Add Firebase Analytics, Crashlytics Fix bags with Summary in DatePreference

--- a/NewsFeeder/app/src/main/res/values/arrays.xml
+++ b/NewsFeeder/app/src/main/res/values/arrays.xml
@@ -11,6 +11,7 @@
     </string-array>
 
     <string-array name="countries">
+        <item></item>
         <item>ru</item>
         <item>ua</item>
         <item>us</item>
