--- a/NewsFeeder/app/src/main/res/layout-sw600dp-land/one_list_item_news.xml
+++ b/NewsFeeder/app/src/main/res/layout-sw600dp-land/one_list_item_news.xml
@@ -17,6 +17,7 @@
         android:maxHeight="72dp"
         android:padding="8dp"
         android:scaleType="fitCenter"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/title"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +29,7 @@
         android:layout_height="wrap_content"
         android:singleLine="false"
         android:textSize="12sp"
+        app:layout_constraintHorizontal_weight="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/article_image"
