--- a/NewsFeeder/app/src/main/res/layout/fragment_news.xml
+++ b/NewsFeeder/app/src/main/res/layout/fragment_news.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/web_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</WebView>
+    <ProgressBar
+        android:id="@+id/web_view_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="100"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
+
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
