--- a/NewsFeeder/app/src/main/res/layout/empty_fragment_layout.xml
+++ b/NewsFeeder/app/src/main/res/layout/empty_fragment_layout.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal|center_vertical"
     android:textSize="24sp"
-    android:text="Ничего не выбрано">
+    android:text="@string/nothing_selected">
 
 </TextView>
